# ood-detection

./: .gitignore  .gitignore_global  README.md  analyze_distributions.py  extract_layers.py  midi_recording.json  ood_detector.py  ood_detector_params.json  pyproject.toml  readable_events.json  requirements.txt
docs/: data_analysis.md  extract_layers.md  installation.md  ood_detection.md
jordan_dataset/train/: state.json
jordan_dataset/validation/: data-00000-of-00001.arrow  dataset_info.json  state.json
results/: analyze_results.ipynb  df_display.csv  layer_stats.json  results_notes.md  stats.json
src/: README.md  __init__.py  analyze_distributions_old.py  constants.py  detect_ood.py  extract_layers.py  jordan_dataset.py  ood_detector.py  setup.py
src/analyze_distribution/: __init__.py  hz.py  mardia.py  preprocess.py  royston.py
src/constants/: __init__.py  data_constants.py  file_format.py  model_constants.py  real_time_constants.py  token_constants.py
src/data/: jordan_dataset.py  maestro_dataset.py  sliding_window.py
src/data_analysis/: __init__.py  all_metrics.csv  distribution_tests.ipynb  events.csv  hz.py  main.ipynb  mardia.py  normality_tests.ipynb  others.py  preprocess.py  royston.py  shapiro.py
src/eval/: __init__.py  auroc.py  graph_viz.py
test/: all_tests.py  conftest.py  test_dataset.py  test_distribution.py  test_extract_representations.py  test_fitting_methods.py  test_jordan_dataset.py  test_notebooks.py  test_ood_detector.py  test_scoring_functions.py  test_transformation_functions.py  test_transformations.py  test_utils.py
(+30 files in other folders)
